--- a/hotspot-ui/src/styles.scss
+++ b/hotspot-ui/src/styles.scss
@@ -64,4 +64,10 @@ html, body {
 
 .center {
   text-align: center;
+  margin: auto;
+}
+
+.sebm-google-map-container * {
+  min-height: 100%;
+  position: relative;
 }
