--- a/hotspot-ui/src/app/login/login.component.html
+++ b/hotspot-ui/src/app/login/login.component.html
@@ -2,15 +2,18 @@
   <md-card-title>Hotspot Login</md-card-title>
   <md-card-content>
     <md-input-container>
-      <input mdInput placeholder="your@email.com" name="email">
+      <input mdInput placeholder="your@email.com" name="email"
+             [(ngModel)]="email">
     </md-input-container>
 
     <md-input-container>
-      <input mdInput placeholder="shhhh" name="password" type="password">
+      <input mdInput placeholder="shhhh" name="password" type="password"
+             [(ngModel)]="password">
     </md-input-container>
 
     <div class="center">
-      <button md-raised-button color="primary">Sign In</button>
+      <button md-raised-button color="primary" (click)="login()">Sign In
+      </button>
     </div>
   </md-card-content>
 </md-card>
